# bgp-hijacking-detection

./: .dockerignore  .gitignore  CITATION.cff  Cargo.toml  Dockerfile  README.md  cspell.json  dev.compose.yml  notes.md  prod.compose.yml
.github/workflows/: ci.yaml  compile.yaml  concept_slides.yaml  implementation_slides.yaml  paper.yaml  part_1_slides.yaml  part_2_slides.yaml  release.yaml  slides.yaml
crates/db/: Cargo.toml
crates/db-types/: Cargo.toml  diesel.toml
crates/db-types/src/: lib.rs
crates/db/src/: batcher.rs  lib.rs  types.rs
crates/db/src/batcher/: events.rs  moas.rs  routes.rs
crates/detection/: Cargo.toml
crates/detection/src/: config.rs  global.rs  lib.rs  main.rs  ripe_ris.rs  service.rs  services.rs
crates/detection/src/ripe_ris/live/: protocol.rs
crates/detection/src/service/: batcher.rs  handler.rs
crates/detection/src/services/: detection.rs
crates/events_migrator/: Cargo.toml
crates/events_migrator/src/: main.rs
crates/ingest/: Cargo.toml  Dockerfile  LICENSE-APACHE
crates/ingest/src/: bgp.rs  config.rs  db.rs  global.rs  lib.rs  main.rs  ripe_ris.rs  service.rs
crates/ingest/src/db/: batcher.rs
crates/ingest/src/ripe_ris/: archived.rs  live.rs
crates/ingest/src/ripe_ris/archived/: file_names.rs
crates/ingest/src/ripe_ris/live/: protocol.rs
crates/ingest/src/service/: handler.rs  seeding.rs
crates/moas_analysis/: Cargo.toml  LICENSE-MIT
crates/moas_analysis/src/: config.rs  lib.rs  main.rs  service.rs
crates/profiling/: Cargo.toml
crates/profiling/src/: config.rs  lib.rs  service.rs
detector/: Cargo.toml
docs/: data.typ  util.typ
docs/paper/: 2_fundamentals.typ  3_related_work.typ  5_concept.typ  7_evaluation.typ  8_conclusion.typ  bibliography.typ  din-1505-2-alphanumeric.csl  figures.typ  statement.typ  util.typ
docs/paper/images/: architecture.drawio  example_network.drawio
docs/slides/: concept.typ  prefix_hijacking.typ
docs/slides/images/: architecture_1.drawio  architecture_2.drawio  architecture_3.drawio  architecture_4.drawio  architecture_5.drawio  architecture_6.drawio  bgp_updates_1.drawio  concept_0.drawio  concept_2.drawio  concept_3.drawio  moas.drawio  network_example_3.drawio  ripe_ris.drawio  simple_bgp.drawio
docs/slides/part_1/: 3_prefix_hijacking.typ  5_concept.typ  main.typ
docs/slides/part_2/: 1_recap_prefix_hijacking.typ  2_recap_concept.typ  3_architecture.typ  4_ingest.typ  5_moas_analysis.typ  main.typ
migrations/: 20260215221118_schema.down.sql  20260215221118_schema.sql  20260215221118_schema.up.sql  clickhouse_schema.up.sql  postgres_schema.down.sql  postgres_schema.up.sql
paper/: 1_introduction.typ  2_fundamentals.typ  3_related_work.typ  4_data_sources.typ  5_concept.typ  6_implementation.typ  7_evaluation.typ  8_conclusion.typ  abbreviations.typ  abstract.typ  bibliography.typ  bibliography.yaml  conclusion.typ  content1.typ  cover.typ  figures.typ  introduction.typ  main.typ  statement.typ  toc.typ  util.typ
paper/images/: bgp_updates.drawio  example_network.drawio  ingest.drawio
slides/: 1_recap.typ  2_bgp.typ  3_prefix_hijacking.typ  4_concept.typ  4_data_sources.typ  5_concept.typ  5_implementation.typ  main.typ
slides/concept/: 3_prefix_hijacking.typ  5_concept.typ
slides/images/: bgp_updates_2.drawio  concept_1.drawio  concept_4.drawio  concept_5.drawio  network_example_1.drawio  network_example_2.drawio  network_example_4_1.drawio  network_example_4_2.drawio
slides/implementation/: main.typ
slides/part_1/: 1_recap.typ  2_bgp.typ  4_data_sources.typ
slides/part_2/: 3_architecture.typ  5_moas_analysis.typ  main.typ
