[package]
name = "db"
version = "0.1.0"
edition = "2024"
authors = ["Lennart Kloock <lennart.kloock@protonmail.com>"]
license = "MIT OR Apache-2.0"
publish = false

[dependencies]
tokio = { version = "1", features = ["sync"] }
scuffle-context = "0.1"
anyhow = "1"
futures-util = "0.3"
tokio-postgres = { version = "0.7", features = ["with-chrono-0_4", "with-cidr-0_3", "with-serde_json-1"] }
clickhouse = { version = "0.14", features = ["chrono"] }
bb8 = "0.9"
bb8-postgres = "0.9"
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
serde_repr = "0.1"
cidr = { version = "0.3", features = ["serde"] }
serde_json = "1"
fxhash = "0.2"
tracing = "0.1"
itertools = "0.14"
