[package]
name = "detection"
version = "0.1.0"
edition = "2024"
authors = ["Lennart Kloock <lennart.kloock@protonmail.com>"]
license = "MIT OR Apache-2.0"
publish = false

[dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "sync"] }
tokio-tungstenite = { version = "0.28", features = ["rustls-tls-webpki-roots"] }
thiserror = "2"
futures-util = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
scuffle-context = "0.1"
scuffle-bootstrap = "0.1"
scuffle-signal = { version = "0.3", features = ["bootstrap"] }
scuffle-settings = { version = "0.1", features = ["cli", "toml", "bootstrap"] }
anyhow = "1"
ipnetwork = { version = "0.20", features = ["serde"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
rustls = "0.23"
sqlx = { version = "0.8", features = ["runtime-tokio", "postgres", "ipnetwork"] }
