[package]
name = "ingest"
version = "0.1.0"
edition = "2024"
authors = ["Lennart Kloock <lennart.kloock@protonmail.com>"]
license = "MIT OR Apache-2.0"
publish = false

[dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "sync"] }
tokio-tungstenite = { version = "0.28", features = ["rustls-tls-webpki-roots"] }
thiserror = "2"
futures-util = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
scuffle-context = "0.1"
scuffle-bootstrap = "0.1"
scuffle-signal = { version = "0.3", features = ["bootstrap"] }
scuffle-settings = { version = "0.1", features = ["cli", "toml", "bootstrap"] }
anyhow = "1"
cidr = { version = "0.3", features = ["serde"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
rustls = "0.23"
tokio-postgres = { version = "0.7", features = ["with-chrono-0_4", "with-cidr-0_3", "with-serde_json-1"] }
postgres-types = { version = "0.2", features = ["derive"] }
bb8 = "0.9"
bb8-postgres = "0.9"
chrono = "0.4"
itertools = "0.14"
fxhash = "0.2"
bgpkit-parser = "0.15"
reqwest = { version = "0.13", features = ["stream"] }
indicatif = "0.18"
