[package]
name = "moas-analysis"
version = "0.1.0"
edition = "2024"
authors = ["Lennart Kloock <lennart.kloock@protonmail.com>"]
license = "MIT OR Apache-2.0"
publish = false

[dependencies]
tokio = { version = "1", features = ["process"] }
futures = "0.3"
db = { path = "../db" }
tokio-postgres = { version = "0.7", features = ["with-chrono-0_4", "with-cidr-0_3", "with-serde_json-1"] }
cidr = "0.3"
serde = { version = "1", features = ["derive"] }
scuffle-context = "0.1"
scuffle-bootstrap = "0.1"
scuffle-signal = { version = "0.3", features = ["bootstrap"] }
scuffle-settings = { version = "0.1", features = ["cli", "toml", "bootstrap"] }
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
